Made some refactors to Store methods and added possible joinMembershipUpdate action